<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<EditText android:id="@+id/edit_signMsg"
    android:hint="@string/edit_sign"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_sign"
    android:onClick="signMsg"/>

<TextView android:id="@+id/sign_result"
    android:text="@string/sign_result"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content" />

<EditText android:id="@+id/edit_verify"
    android:hint="@string/edit_verify"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_verify"
    android:onClick="verifyMsg"/>

<TextView android:id="@+id/verify_result"
    android:text="@string/verify_result"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content" />

</LinearLayout>
